2007-08-28  Helmut Eller  <heller@common-lisp.net>

	Move presentations to contrib.  Part II.

	* swank.lisp (*listener-eval-function*): New variables.
	(listener-eval): Use it
	(repl-eval): Used to be listener-eval.
	(*send-repl-results-function*): New variable.
	(eval-region): Simplify.
	(track-package, cat): New functions.
	(slime-repl-clear-buffer-hook): New hook.
	(slime-repl-clear-buffer): Use it.

2007-08-28  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	Remove the ID argument from :write-string protocol messages.
	Everything, except for rigid-indentation tricks, can be achieved
	by using :write-string in conjunction with :presentation-start and
	:presentation-end. 
	
	* swank.lisp (present-in-emacs): Unused, removed.
	
	* swank.lisp (make-output-function-for-target): Remove id argument
	from :write-string.
	(send-repl-results-to-emacs): Don't call
	save-presented-object. Remove id argument from :write-string.

	* slime.el (slime-dispatch-event): Change it here.
	(slime-write-string, slime-repl-write-string): And here.

2007-08-28  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank-loader.lisp (*contribs*): Add swank-presentations.

2007-08-27  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-make-extended-operator-parser/look-ahead): Move
	to end of symbol at point.
	(slime-make-form-spec-from-string): Fixes unexpected behaviour of
	`save-excursion'.
	
2007-08-27  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-sexp-at-point): Fixes a few edge cases were
	Emacs' `(thing-at-point 'sexp)' behaves suboptimally. For example,
	`foo(bar baz)' where point is at the ?\(.
	(slime-internal-scratch-buffer): New. This variable holds an
	internal scratch buffer that can be reused instead of having to
	create a new temporary buffer again and again.
	(slime-make-extended-operator-parser/look-ahead): Uses
	`slime-make-form-spec-from-string' to parse nested expressions
	properly.
	(slime-nesting-until-point): Added docstring.